--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1",
     "react-hook-form": "^7.46.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
