--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.15.4",
     "axios": "^1.7.2",
     "next": "14.2.3",
+    "nextjs-toploader": "^1.6.12",
     "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
