--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.1",
     "@mui/material": "^5.15.4",
     "axios": "^1.7.2",
     "next": "14.2.3",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.46.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "recoil": "^0.7.7",
     "yup": "^1.3.2"
   },
   "devDependencies": {
